--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,11 @@ spring:
     name: user-center
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/user-center
+    url: jdbc:mysql://localhost:3306/user-centeruser
     username: root
     password: root
 server:
   port: 8080
-
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
